# libtable

./: .gitignore  README.md  TODO  pyproject.toml
.github/workflows/: build.yml
_old/: tablecontrol.py  tableselectcontrol.py
examples/: data.py  ex1.py  ex2.py  ex3.py  ex4.py  ex_table.py  ex_tablecontrol_1.py  ex_tablecontrol_2.py  ex_tableedit.py  ex_tableeditcontrol_1.py  ex_tableeditcontrol_2.py  ex_tableprompt.py  ex_tableselect.py  ex_tableselectcontrol_1.py  ex_tableselectcontrol_2.py  ex_tableselectcontrol_3.py  ex_tableselectcontrol_4.py  ex_tableselectcontrol_5.py  ex_tableselectcontrol_6.py  test.py
libtable/: __init__.py  _baseclass.py  _basetablecontrol.py  _basetablecontrolold.py  _exception.py  _tablecontrol.py  table.py  tablecontrol.py  tabledit.py  tableeditcontrol.py  tableprompt.py  tableselect.py  tableselectcontrol.py
