[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "libtable"
version = "0.2.1"
description = "Python library for cli tables"
authors = ["Sebastien GUERRI <nierrgu@bmel.fr>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/sguerri/libtable"
repository = "https://github.com/sguerri/libtable"
packages = [
    { include = "libtable" }
]

[tool.poetry.dependencies]
python = ">=3.6.2,<4.0"
prompt-toolkit = "^3.0.29"

[tool.poetry.dev-dependencies]
